style.css
* {
    font-family: 'Roboto', sans-serif;
    margin: 0px;
}

.container1 {
    background-color: #1F2937;
    padding-left: 200px;
    padding-right: 200px;
}

.header {
    display: flex;
    justify-content: space-between;
    padding-top: 10px;
}

.header-logo {
    color: #F9FAF8;
    font-size: 24px;
}

.header-links {
    display: flex;
}

.header-link {
    padding-left: 50px;
    color: #E5E7EB;
}

.hero {
    display: flex;
    justify-content: space-between;
    padding-top: 100px;
    padding-bottom: 100px;
}

.hero-text {
    width: 700px;
}

.hero-main-text {
    font-size: 48px;
    font-weight:bolder;
    color: #F9FAF8;
}

.hero-secondary-text {
    color: #E5E7EB;
    margin-top: 20px;
}

.hero-image {
    display:flex;
    flex-direction: column;
    justify-content: center;
    background-color: gray;
    color: whitesmoke;
    justify-items: normal;
    padding: 70px;
}

.button {
    background-color: #3882f6;
    border-radius: 5px;
    width: fit-content;
    padding: 5px 20px 5px 20px;
    margin-top: 20px;
}

.container2 {
    display: flex;
    flex-direction: column;
}

.gallery-heading {
    size: 36px;
    font-weight: bolder;
    font-size: 36px;
    margin: 20px;
    align-self: center;
}

.gallery-images {
    display: flex;
    justify-content: center;
    gap: 40px;
}

.gallery-image {
    width: 200px;
}

.gallery-image .image {
    border-color: black;
    padding: 100px;
    border-width: 10px;
    border-style: solid;
    border-radius: 20px;
}

